--- a/Visa_agency/templates/main.html
+++ b/Visa_agency/templates/main.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <a href="countries.html">Countries</a>
+        <a href="visatypes.html">Visa Types</a>
+        <a href="documents.html">Documents</a>
+        <a href="profile.html">Profile</a>
+    </header>
 </body>
 </html>
