--- a/Agency/static/main.css
+++ b/Agency/static/main.css
@@ -1,14 +1,28 @@
 body {
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
-
-
 
 
 header {
     position: fixed;
-    height: 200px;
+    top: 0;
+    left: 0;
+    width: calc(100% - 20px);
     background-color: black;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    gap: 40px;
+    font-size: larger;
+    padding: 30px 10px;
+    z-index: 100;
+}
+
+
+header a {
+    color: white;
 }
