underline is created

--- a/Agency/templates/main.html
+++ b/Agency/templates/main.html
@@ -6,13 +6,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visa</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
     <header>
-        <a>Countries</a>
-        <a>Visa Type</a>
-        <a>Profile</a>
+        <a class="underline-animation">Countries</a>
+        <a class="underline-animation">Visa Type</a>
+        <a class="underline-animation">Profile</a>
     </header>
 </body>
 </html>
